--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "01_newbie/nft-card-component"]
 	path = 01_newbie/nft-card-component
 	url = https://github.com/namlh023/nft-card-component/
+[submodule "01_newbie/order-summary-component"]
+	path = 01_newbie/order-summary-component
+	url = https://github.com/namlh023/Order-Summary-Component
