--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "01_newbie/base-apparel-comming-soon-section"]
 	path = 01_newbie/base-apparel-comming-soon-section
 	url = https://github.com/namlh023/base-apparel-comming-soon-section
+[submodule "01_newbie/profile-card"]
+	path = 01_newbie/profile-card
+	url = https://github.com/namlh023/profile-card-component
